fix(projects): Change styling to prevent cropped images in project single page on mobile

--- a/assets/assets/css/services-projects.css
+++ b/assets/assets/css/services-projects.css
@@ -384,13 +384,10 @@
 }
 
 .project-single-hero-img img {
-    /*
     width       : 100%;
-    height      : 100%;
-    */
-    height      : 30rem;
-    width       : auto;
-    object-fit  : cover;
+    height      : auto;
+    max-height  : 30rem;
+    object-fit  : contain;
     display     : block;
 }
 
@@ -516,8 +513,14 @@
     .project-entry-img {
         /* aspect-ratio: 16 / 8; */
         aspect-ratio: 4 / 3;
-        height      : 10rem;
+        height      : 100%;
         width       : auto;
+    }
+    .service-entry-img img,
+    .project-entry-img img {
+        width           : 100%;
+        height          : 100%;
+        object-fit      : cover;
     }
 }
 
